IDA* optimization